added basic authentication

--- a/views/posts.pug
+++ b/views/posts.pug
@@ -5,6 +5,7 @@ html(lang="ja")
     title 体重記録簿
   body
     h1 体重記録簿
+    a(href='/logout') ログアウト
     form(method="post" action="/posts")
       div
         p 〇月〇日
