get date string

--- a/views/posts.pug
+++ b/views/posts.pug
@@ -23,4 +23,8 @@ html(lang="ja")
       tr
         each item in data
           td
+            | !{item.day}
+      tr
+        each item in data
+          td
             | !{item.weight}
