read data from sample_data.csv

--- a/views/posts.pug
+++ b/views/posts.pug
@@ -4,7 +4,7 @@ html(lang="ja")
     meta(charset="UTF-8")
     title 体重記録簿
   body
-    h1 体重記録簿
+    h1 体重記録簿 !{user_name}
     a(href='/logout') ログアウト
     form(method="post" action="/posts")
       table
